# mediainfo_props

./: CMakeLists.txt  README.md  mediainfo_props.cpp  mediainfo_props.desktop  mediainfo_props.hpp  mediainfo_widget.hpp
